--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "extends": "react-app"
   },
   "engines": {
-    "node": "16.15.0",
+    "node": "22.x",
     "pnpm": "^8"
   },
   "devDependencies": {
